add more style and validations

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Obten datos interesantes sobre los números. NumFact proporciona curiosidades, datos matemáticos, fechas y años sobre los números.">
+    <title>NumFact</title>
   </head>
   <body>
     <div id="root"></div>
