add google index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Obten datos interesantes sobre los números. NumFact proporciona curiosidades, datos matemáticos, fechas y años sobre los números.">
+    <meta name="google-site-verification" content="N4sQRMFgLsRVn6GesgKdvikGj7esQMaO8RlfoFK31NY" />
     <title>NumFact</title>
   </head>
   <body>
